--- a/src/app/components/product/product-read/product-read.component.css
+++ b/src/app/components/product/product-read/product-read.component.css
@@ -1,3 +1,14 @@
 table {
     width: 100%;
 }
+
+td a {
+    text-decoration: none;
+    margin-left: 15px;
+}
+i.delete {
+    color: #e35e6b;
+}
+i.edit {
+    color: #d9cd26;
+}
