--- a/src/app/components/product/product-read/product-read.component.html
+++ b/src/app/components/product/product-read/product-read.component.html
@@ -10,6 +10,19 @@
       <th mat-header-cell *matHeaderCellDef> Name </th>
       <td mat-cell *matCellDef="let product"> {{product.name}} </td>
     </ng-container>
+
+    <!-- Options Column -->
+    <ng-container matColumnDef="options">
+      <th mat-header-cell *matHeaderCellDef> Options </th>
+      <td mat-cell *matCellDef="let product">
+        <a routerLink="/product/edit/{{ product.id }}">
+          <i class="material-icons edit">edit</i>
+        </a>
+        <a routerLink="/product/delete/{{ product.id }}">
+          <i class="material-icons delete">delete</i>
+        </a>
+      </td>
+    </ng-container>
   
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let product; columns: displayedColumns;"></tr>
