--- a/src/app/views/product/product.component.html
+++ b/src/app/views/product/product.component.html
@@ -1,4 +1,5 @@
-<button mat-raised-button (click)="navigateProductCreate()">
+<!-- <button mat-raised-button (click)="navigateProductCreate()"> -->
+<button mat-raised-button [routerLink]="['/product/create']">
     Create Product
 </button>
 <app-product-read></app-product-read>
