feat-3: login integred auth.service

--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -10,4 +10,9 @@
             Aplication
         </a>
     </span>
+    <span>
+        <a class="title-group" routerLink="/login">
+            Login
+        </a>
+    </span>
 </mat-toolbar>
