--- a/src/app/components/template/header/header.component.html
+++ b/src/app/components/template/header/header.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar class="header mat-elevation-z4">
+<mat-toolbar class="mat-elevation-z8 header">
     <span>
         <a>
             <img class="logo" src="https://code4coders.files.wordpress.com/2017/05/angularjs.png?w=640" alt="">
