--- a/src/app/components/product/product-read/product-read.component.html
+++ b/src/app/components/product/product-read/product-read.component.html
@@ -15,7 +15,7 @@
     <ng-container matColumnDef="options">
       <th mat-header-cell *matHeaderCellDef> Options </th>
       <td mat-cell *matCellDef="let product">
-        <a routerLink="/product/edit/{{ product.id }}">
+        <a routerLink="/product/update/{{ product.id }}">
           <i class="material-icons edit">edit</i>
         </a>
         <a routerLink="/product/delete/{{ product.id }}">
